2.20 - ?
	- Order the VNs listed on char browser by release date
	- Order the traits groups on /i by their 'order' column
	- CSS: Hide links in [spoiler] tags
	- Bugfix: don't accidentally remove char traits when editing
	- Bugfix: fixed possible SQL table name clash on history browser
	- Bugfix: properly announce chars and traits in Multi::IRC
	- Bugfix: display more than 10 characters on VN page
	- Bugfix: removed Perl warning in Handler::Chars
	- Bugfix: use the 'vnlists' table to calculate stats on user page
	- Bugfix: allow adding/copying a char with instance field set
	- Bugfix: copy over search string when switching to trait search
	- Bugfix: Use the translatable role names on char<->vn link form
	- Bugfix: Prevent the spiol dd to hide the del link on char<->trait form

2.19 - 2011-03-30
	- Character database:
	  - New DB item (versioned): character, page: /c+
	  - New DB item (not versioned): traits (like tags), page: /i+
	  - New pages: trait listing/browser: /i/*
	  - New pages: character browser: /c/*
	  - VN pages updated with a characters tab
	- Changed text color of inactive tabs
	- Don't allow users to edit their post when it was deleted
	- Auto-set category when creating new child tag
	- Increased allowed size of VN cover image upload to 5MB

2.18 - 2011-02-08
	- Added category field to tags (content/ero/technical)
	- Group tags on /v+/tagmod by their category
	- Added tag visibility options by category on /v+
	- Added filter selector to tag pages (excl. tags tab)
	- Added new VN filters: wish/blacklist, voted, on VN list
	- Added tooltip to the overruled-exclamation-mark
	- Bugfix: don't generate listdel notify for the user who deleted

2.17 - 2011-02-04
	- Allow moderators to overrule VN tag votes
	- Added 'released' release filter
	- Changed order of the filter action buttons
	- Slightly re-organized lang.txt
	- Fixed perl warning on /u+/votes batchedit with nothing selected
	- Don't update the 'date' when changing a VN vote
	- Switched to TUWF